# freedesktop_entry_parser

./: .build.yml  .gitignore  Cargo.toml  README.md
contrib/: _incr_version
examples/: systemd_start_cmd.rs
src/: debug.rs  errors.rs  internal.rs  lib.rs  parser.rs
